@@ -67,7 +67,7 @@ public class Prayer_CauseFatigue extends Prayer
 				{
 					int harming=CMLib.dice().roll(3,adjustedLevel(mob,asLevel),10);
 					target.curState().adjFatigue((target.curState().getFatigue()/2),target.maxState());
-					target.curState().adjMovement(harming,target.maxState());
+					target.curState().adjMovement(-harming,target.maxState());
 					target.tell("You feel slightly more fatigued!");
 				}
 			}
