@@ -48,7 +48,7 @@ public class Thief_DisablingCaltrops extends Thief_Caltrops
 		else
 		if(mob.curState().getMovement()>6)
 		{
-			mob.curState().adjMovement(CMLib.dice().roll(3+getX1Level(mob),4,3),mob.maxState());
+			mob.curState().adjMovement(-CMLib.dice().roll(3+getX1Level(mob),4,3),mob.maxState());
 			mob.location().show(invoker(),mob,this,CMMsg.MSG_OK_ACTION,"The "+caltropTypeName()+"caltrops on the ground disable <T-NAME>");
 		}
 		// does not set sprung flag -- as this trap never goes out of use
