@@ -112,7 +112,8 @@ Usage    : BANDAGE [MOB NAME]\n\r\
 Example  : bandage bob\n\r\
 This skill allows the player to use a small bit of raw cloth to bandage up \
 any serious wounds.  This skill will stop bleeding, and protect extreme \
-injuries, allowing the body to heal normally.
+injuries, allowing the body to heal normally.  The skill allows a small amount \
+of hit points to be restored during the process.
 
 BLACKSMITH=BLACKSMITHING
 BLACKSMITHING=<ABILITY>\
